--- a/src/App.css
+++ b/src/App.css
@@ -58,10 +58,10 @@
   }
 }
 /* desktop layout */
-@media (max-width:1440px){
+@media (min-width:720px){
   .App{
     background-image: url("./assets/images/background-pattern-desktop.svg");
-    max-width: 1320px;
+    max-width: 1440px;
     /* width: 500px; */
     padding: 10rem 0px;
   }
